<resources>
    <string name="app_name">AssetFix</string>
    <string name="welcomeText1"><b>Digital \nAsset \nManagement\nsolution\nthat\nworks\nfor\nyou</b></string>
    <string name="welcomeImageDescription">Welcoming page backgroundImage</string>
    <string name="get_started">Get Started</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="automated_asset_management">Automated Asset Management</string>
    <string name="feature1_description">AssetFix\'s automated asset management tools simplify asset tracking, reduce downtime and costs, and help you gain insights into the full asset lifecycle.</string>
    <string name="intuitive_preventive_maintenance_tool">Intuitive Preventive Maintenance Tool</string>
    <string name="feature2_description">AssetFix\'s preventive maintenance tool helps maintenance professionals prevent asset breakdowns before they happen. The tool alerts you to potential issues, schedules preventive maintenance tasks, and helps you prepare and prevent rather than repair and repent.</string>
    <string name="comprehensive_inventory_management">Comprehensive Inventory Management</string>
    <string name="feature3_description">AssetFix\'s inventory management features provide powerful insights to better control costs and ensure that you have sufficient supply in stock. Manage parts quantities and costs easily and make informed purchasing decisions</string>
    <string name="welcome_to">Welcome to</string>
    <string name="log_in_to_continue">Log In to Continue.</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="create_an_account">Create an account</string>
    <string name="it_takes_less_than_a_minute">It takes less than a minute</string>
    <string name="email">Email</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="password">Password</string>
    <string name="simple_fast_and_easy_registration">Simple, Fast and Easy Registration</string>
    <string name="we_are_glad_you_chose_us">We are glad you chose us!</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="organization">Organization</string>
    <string name="next">Next</string>
    <string name="do_you_have_an_account">Do you have an account?<u>Log in</u></string>
    <string name="retype_password">Retype Password</string>
    <string name="title_activity_menu_dashboard">menu_dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="john_doe"><b>John Doe</b></string>
    <string name="indentigate_integrated_solutions">Indentigate Integrated Solutions</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="settings">Settings</string>
    <string name="general_settings">General</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="messages">Messages</string>
    <string name="home">Home</string>
    <string name="inventory">Inventory</string>
    <string name="work_order">Work Order</string>
    <string name="parts_amp_inventory"><![CDATA[Parts & Inventory]]></string>
    <string name="assets">Assets</string>
    <string name="floating_action_bar">Floating Action Bar</string>
    <string name="searchbar_hint">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_work_orders"><b>Open Work Orders</b></string>
    <string name="number"><b>6</b></string>
    <string name="side_menu_home_title">Home</string>
    <string name="side_menu_profile_title">Profile</string>
    <string name="side_menu_parts_and_supplies_title"><![CDATA[Parts & Supplies]]></string>
    <string name="side_menu_assets_title">Assets</string>
    <string name="side_menu_people_and_teams_title"><![CDATA[People & Teams]]></string>
    <string name="side_menu_inspections_and_supervision_title"><![CDATA[Inspections & Supervision]]></string>
    <string name="side_menu_vendors_and_customers_title"><![CDATA[Vendors & Customers]]></string>
    <string name="side_menu_sign_out_title">Sign Out</string>
    <string name="bottom_nav_menu_assets_title">Assets</string>
    <string name="bottom_nav_menu_people_and_teams_title"><![CDATA[People & Teams]]></string>
    <string name="bottom_nav_menu_home_text">Home</string>
    <string name="bottom_nav_menu_work_order_title">Work Order</string>
    <string name="active_work_orders_title">Active Work Orders</string>
    <string name="active_work_orders_content">5000</string>
    <string name="active_assets_title">Active Assets</string>
    <string name="active_assets_content">300</string>
    <string name="active_users_content">13</string>
    <string name="active_users_title">Active Users</string>
    <string name="active_work_order_number_content">743279</string>
    <string name="recent_work_order_number_content">743279</string>
    <string name="recent_work_orders_title">Recent Work Orders</string>
    <string name="recent_work_order_number_title">"Worker Order Number: "</string>
    <string name="recent_work_order_status_title">"Status: "</string>
    <string name="recent_work_status_content">In Progress</string>
    <string name="recent_work_order_priority_title">Priority: </string>
    <string name="recent_work_priority_content">Medium</string>
    <string name="recent_work_order_type_title">Type: </string>
    <string name="recent_work_type_content">Corrective</string>
    <string name="recent_work_order_asset_title">Asset: </string>
    <string name="recent_work_asset_content">Backup Generator</string>
    <string name="recent_work_order_assigned_to_title">"Assigned To: "</string>
    <string name="recent_work_assigned_to_content">Angelita Carlity Jnr</string>
    <string name="recent_work_order_due_date_title">Due Date:</string>
    <string name="recent_work_due_date_content">24/07/24</string>
    <string name="empty_work_orders_title">You don\'t have any work orders</string>
    <string name="empty_work_orders_byline">Get started by adding a new work order</string>
    <string name="empty_assets_title">You don\'t have any assets</string>
    <string name="empty_assets_byline">Get started by added a new asset</string>
    <string name="empty_partsandsupplies_title">You don\'t have any parts</string>
    <string name="empty_partsandsupplies_byline">Get started by added a new part</string>
    <string name="empty_peopleandteams_title">You don\'t have any users</string>
    <string name="empty_peopleandusers_byline">Get started by inviting a new user</string>
    <string name="empty_inspectionsandsupervision_title">You don\'t have any reports</string>
    <string name="empty_inspectionsandsupervision_byline">Get started by adding a new report</string>
    <string name="empty_vendorsandcustomers_title">You don\'t have any people</string>
    <string name="empty_vendorsandcustomers_byline">Get started by adding new people</string>
    <string name="issue_summary_title">Issue Summary</string>
    <string name="issue_summary_content">Work complete but had a slight delay of 2 weeks</string>
    <string name="asset_location_title">Asset/Location</string>
    <string name="project_content">No project selected</string>
    <string name="work_order_status_title">Work order status</string>
    <string name="work_order_status_content">In Progress</string>
    <string name="maintenance_type_title">Maintenance Type</string>
    <string name="maintenance_type_content">Corrective</string>
    <string name="priority_title">priority_title</string>
    <string name="estimated_time_title">Estimated Time</string>
    <string name="estimated_time_content">43hrs 11min</string>
    <string name="assigned_to_title">Assigned To</string>
    <string name="tasks_title">Tasks</string>
    <string name="tasks_content">--</string>
    <string name="files_title">Files</string>
    <string name="files_content">"No Files Uploaded "</string>
    <string name="asset_location_content">Identigate HQ</string>
    <string name="project_title">Project</string>
    <string name="asset_details_name_title">Name</string>
    <string name="asset_details_name_content">Server HP ProLiant XL</string>
    <string name="asset_details_preferred_vendor_title">Preferred Vendor</string>
    <string name="asset_details_preferred_vendor_content">HP Inc</string>
    <string name="asset_details_other_vendors_title">Other Vendors</string>
    <string name="asset_details_other_vendors_content">Saruk Digital Solutions</string>
    <string name="asset_details_location_title">Location</string>
    <string name="asset_details_location_content">Metrosoft Systems</string>
    <string name="asset_details_department_title">Department</string>
    <string name="asset_details_department_content">ICT</string>
    <string name="asset_details_category_title">Category</string>
    <string name="asset_details_category_content">Computers</string>
    <string name="asset_details_sub_category_title">Sub-category</string>
    <string name="asset_sub_category_content">Servers</string>
    <string name="asset_details_make_title">Make</string>
    <string name="asset_details_make_content">HP</string>
    <string name="asset_details_model_title">Model</string>
    <string name="asset_details_model_content">ProLiant XL</string>
    <string name="asset_details_brand_title">Brand</string>
    <string name="asset_details_brand_content">HP</string>
    <string name="asset_details_serial_number_title">Serial Number</string>
    <string name="asset_details_serial_number_content">FFD013012FDS</string>
    <string name="asset_details_purchase_date_title">Purchase Date</string>
    <string name="asset_details_purchase_date_content">01/01/2018</string>
    <string name="asset_details_useful_life_title">Useful Life</string>
    <string name="asset_details_useful_life_content">5 years</string>
    <string name="asset_details_purchase_price_title">Purchase Price</string>
    <string name="asset_details_purchase_price_content">500, 000</string>
    <string name="asset_details_residual_value_title">Residual Value</string>
    <string name="asset_details_residual_value_content">180, 000</string>
    <string name="asset_details_bar_code_title">Bar code</string>
    <string name="asset_details_bar_code_content">72527273070</string>
    <string name="asset_details_notes_title">Notes</string>
    <string name="asset_details_notes_content">--</string>
    <string name="asset_details_files_title">Files</string>
    <string name="asset_details_files_content">--</string>
    <string name="peopleandteams_details_name_title">Name</string>
    <string name="peopleandteams_details_name_content">Angelita Cassin Jr.</string>
    <string name="peopleandteams_details_role_title">Role</string>
    <string name="peopleandteams_details_role_content">Admin</string>
    <string name="peopleandteams_details_email_title">Email</string>
    <string name="peopleandteams_details_email_content">new-admin@test.com</string>
    <string name="peopleandteams_details_phone_number_title">Phone Number</string>
    <string name="peopleandteams_details_phone_number_content">+150 426 062 82</string>
    <string name="peopleandteams_details_verified_at_title">Verified At</string>
</resources>