<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_item"
        android:title="@string/general_settings">
        <menu>
            <item
                android:id="@+id/home_item"
                android:icon="@drawable/bx_home"
                android:title="@string/home"
                android:checkable="true"
                />
            <item
                android:id="@+id/messages_item"
                android:icon="@drawable/bx_message_square_minus"
                android:title="@string/messages"
                android:checkable="true"/>
            <item
                android:id="@+id/notification_item"
                android:icon="@drawable/bx_bell"
                android:title="@string/notification"
                android:checkable="true"/>
            <item
                android:id="@+id/profile_item"
                android:icon="@drawable/bx_user"
                android:title="@string/profile"
                android:checkable="true"/>
        </menu>
    </item>
    <item
        android:id="@+id/inventory_item"
        android:title="@string/inventory">
        <menu>
            <item
                android:id="@+id/work_order_item"
                android:icon="@drawable/bx_notepad"
                android:title="@string/work_order"
                android:checkable="true"
                />
            <item
                android:id="@+id/parts_inventory_item"
                android:icon="@drawable/bx_wrench"
                android:title="@string/parts_amp_inventory"
                android:checkable="true"
                />
            <item
                android:id="@+id/assets_item"
                android:icon="@drawable/bxs_briefcase"
                android:title="@string/assets"
                android:checkable="true"
                />
        </menu>
    </item>
</menu>
