<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_item"
        android:title="@string/general_settings">
        <menu>
            <item
                android:id="@+id/side_menu_home"
                android:icon="@drawable/bx_home"
                android:title="@string/side_menu_home_title"
                android:checkable="true"
                />
            <item
                android:id="@+id/side_menu_profile"
                android:icon="@drawable/bx_user"
                android:title="@string/side_menu_profile_title"
                android:checkable="true"/>

        </menu>
    </item>
    <item
        android:id="@+id/inventory_item"
        android:title="@string/inventory">
        <menu>

            <item
                android:id="@+id/side_menu_parts_and_supplies"
                android:icon="@drawable/bx_wrench"
                android:title="@string/side_menu_parts_and_supplies_title"
                android:checkable="true"/>
            <item
                android:id="@+id/side_menu_assets"
                android:icon="@drawable/bxs_briefcase"
                android:title="@string/side_menu_assets_title"
                android:checkable="true"/>
            <item
                android:id="@+id/side_menu_people_and_teams"
                android:icon="@drawable/bx_user"
                android:title="@string/side_menu_people_and_teams_title"
                android:checkable="true"/>
            <item
                android:id="@+id/side_menu_inspections_and_supervision"
                android:icon="@drawable/bx_notepad"
                android:title="@string/side_menu_inspections_and_supervision_title"
                android:checkable="true"/>
            <item
                android:id="@+id/side_menu_vendors_and_customers"
                android:icon="@drawable/bx_user"
                android:title="@string/side_menu_vendors_and_customers_title"
                android:checkable="true"/>
            <item
                android:id="@+id/side_menu_sign_out"
                android:icon="@drawable/bx_bell"
                android:title="@string/side_menu_sign_out_title"
                android:checkable="true"/>

        </menu>
    </item>
</menu>
