<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mobile.workOrder.WorkOrderDetailsFragment"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="70dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="right"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/create_work_order_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/bx_wrench"
            android:layout_marginRight="16sp"
            android:layout_marginBottom="1dp">

        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingTop="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/issue_summary_title"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/issue_summary_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"
                android:textColor="@color/black"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="6dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingTop="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/asset_location_title"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/asset_location_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"
                android:textColor="@color/black"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="6dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingTop="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/project_title"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/project_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"
                android:textColor="@color/black"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="6dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingTop="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/work_order_status_title"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/work_order_status_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"
                android:textColor="@color/black"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="6dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingTop="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/maintenance_type_title"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/maintenance_type_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"
                android:textColor="@color/black"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="6dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingTop="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/recent_work_order_priority_title"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/recent_work_priority_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"
                android:textColor="@color/black"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="6dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingTop="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/recent_work_order_due_date_title"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/recent_work_due_date_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"
                android:textColor="@color/black"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="6dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingTop="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/estimated_time_title"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/estimated_time_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"
                android:textColor="@color/black"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="6dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingTop="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/assigned_to_title"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/recent_work_assigned_to_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"
                android:textColor="@color/black"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="6dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingTop="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tasks_title"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tasks_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"
                android:textColor="@color/black"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="6dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingTop="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/files_title"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/files_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"
                android:textColor="@color/black"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="6dp"
                />

        </LinearLayout>

    </LinearLayout>

    </ScrollView>



</LinearLayout>